nullaway_error_3af8e8a6-e223-4bba-a925-65d0c8aa979c.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/sound/SoundEvent.java:33: error: [NullAway] dereferenced expression this.sound is @Nullable
    return super.toString() + "[sound=" + this.sound.getName() + "]";
                                                    ^
    (see http://t.uber.com/nullaway )
